# hermytt

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  VAULT.md  deploy.sh  hermytt.example.toml  package-lock.json  package.json  playwright.config.js
hermytt-cli/: Cargo.toml
hermytt-cli/src/: main.rs
hermytt-core/: Cargo.toml
hermytt-core/src/: buffer.rs  control.rs  exec.rs  lib.rs  pairing.rs  registry.rs  session.rs
hermytt-server/: Cargo.toml
hermytt-server/src/: config.rs  main.rs
hermytt-server/tests/: integration.rs  regression.rs
hermytt-transport/: Cargo.toml
hermytt-transport/src/: bootstrap.rs  control_ws.rs  lib.rs  mqtt.rs  mqtt_pty.rs  rest.rs  tcp.rs  telegram.rs  websocket.rs
hermytt-web/: Cargo.toml
hermytt-web/src/: lib.rs
hermytt-web/static/: admin.html  terminal.html
tests-e2e/: terminal.spec.js
tests-staging/: deploy.sh  grytti.toml  run.sh  shytti.toml  staging.toml
