[workspace]
resolver = "2"
members = [
    "hermytt-core",
    "hermytt-transport",
    "hermytt-server",
    "hermytt-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# PTY
portable-pty = "0.9"

# Web / HTTP
axum = { version = "0.8", features = ["ws"] }

# MQTT
rumqttc = "0.24"

# Serialization & config
serde = { version = "1", features = ["derive"] }
toml = "0.8"

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# IDs
uuid = { version = "1", features = ["v4"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Async trait
async-trait = "0.1"

# Bytes / channels
bytes = "1"
tokio-stream = { version = "0.1", features = ["sync"] }
futures-util = "0.3"
async-stream = "0.3"

# Internal crates
hermytt-core = { path = "hermytt-core" }
hermytt-transport = { path = "hermytt-transport" }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
