[workspace]
resolver = "2"
members = [
    "hermytt-core",
    "hermytt-transport",
    "hermytt-server",
    "hermytt-cli", "hermytt-web",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# PTY
portable-pty = "0.9"

# Web / HTTP
axum = { version = "0.8", features = ["ws", "multipart"] }
tower-http = { version = "0.6", features = ["cors"] }

# MQTT
rumqttc = "0.24"
rumqttd = "0.20"

# Serialization & config
serde = { version = "1", features = ["derive"] }
toml = "0.8"

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# IDs
uuid = { version = "1", features = ["v4"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Async trait
async-trait = "0.1"

# Bytes / channels
bytes = "1"
tokio-stream = { version = "0.1", features = ["sync"] }
futures-util = "0.3"
async-stream = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde_json = "1"
axum-server = { version = "0.7", features = ["tls-rustls"] }
tokio-rustls = "0.26"
rustls-pemfile = "2"
base64 = "0.22"
tokio-tungstenite = "0.28"

# Internal crates
hermytt-core = { path = "hermytt-core" }
hermytt-transport = { path = "hermytt-transport" }
hermytt-web = { path = "hermytt-web" }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
