[package]
name = "hermytt-server"
version.workspace = true
edition.workspace = true

[dependencies]
hermytt-core.workspace = true
hermytt-transport.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
serde.workspace = true
toml.workspace = true
clap.workspace = true
futures-util.workspace = true
uuid.workspace = true
