[package]
name = "hermytt-server"
version.workspace = true
edition.workspace = true

[dependencies]
hermytt-core.workspace = true
hermytt-transport.workspace = true
hermytt-web.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
serde.workspace = true
toml.workspace = true
clap.workspace = true
futures-util.workspace = true
uuid.workspace = true

[dev-dependencies]
reqwest.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["test-util"] }
tokio-tungstenite.workspace = true
rumqttc.workspace = true
rumqttd.workspace = true
base64.workspace = true
