[package]
name = "hermytt-transport"
version.workspace = true
edition.workspace = true

[dependencies]
hermytt-core.workspace = true
hermytt-web.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
axum.workspace = true
rumqttc.workspace = true
bytes.workspace = true
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true
async-trait.workspace = true
serde.workspace = true
uuid.workspace = true
futures-util.workspace = true
async-stream.workspace = true
reqwest.workspace = true
serde_json.workspace = true
